--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
     <style>
+      * {
+        padding: 0;
+        margin: 0;
+        border: box;
+      }
+
+      body {
+        max-width: 700px;
+        max-height: 720px;
+      }
+
       #moviment {
         text-align: center;
         width: 400px;
